--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "oyd",
+  "name": "itupy",
   "version": "1.0.0",
   "description": "",
   "main": "src/server.ts",
   "type": "module",
   "scripts": {
+    "dev:css": "npx tailwindcss -i ./public/styles/tailwind.css -o ./public/styles/output.css --watch",
     "dev": "node --watch src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,9 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.19",
+    "autoprefixer": "^10.4.23",
     "ejs": "^4.0.1",
     "express": "^5.2.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
